@@ -1,3 +1,7 @@
+2007-01-09  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.java: Add new path functions.
+
 2007-01-04  Per Bothner  <per@bothner.com>
 
 	* standard/load.java (apply): Use Path's openInputStream.
